@@ -4,7 +4,8 @@ Changelog
 1.4.1 (unreleased)
 ~~~~~~~~~~~~~~~~~~
 
-- Nothing changed yet.
+- Fix Unicode error when a question contains non-ascii char.
+  [sylvainb, Helmut Toplitzer]
 
 1.4 (2012-06-22)
 ~~~~~~~~~~~~~~~~
